test/sema/s03/fail_coloneq_on_wire.nsl
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
//
// test/sema/s03/fail_coloneq_on_wire.nsl — S3 (lang.ebnf:835) fail
// variant. `:=` LHS resolved to a `wire` is forbidden — must use
// `=`.
//
// Frozen diagnostic per `contracts/diagnostic-string.contract.md`:
//   ':=' targets a reg or struct-instance-reg; use '=' for wire/output/inout/variable/integer (S3)
//
// FixItHint per `diagnostic-string.contract.md` table (T040):
// replaceRange = TransferStmt::eqOpRange, replacement = `=`.
//
// **Phase 4a TDD red state**: no S3 checker exists; FAILS until
// Phase 4b T044.

// RUN: not %nslc -emit=ast %s 2>&1 | FileCheck %s

module m_fail {
  wire w;
  func clk {
    w := 0;
  }
}

// CHECK: error: ':=' targets a reg or struct-instance-reg; use '=' for wire/output/inout/variable/integer (S3)
// CHECK: fix-it:{{.*}}=
